--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,5 +34,7 @@
       <script src="./bootstrap/dist/js/bootstrap.min.js"></script>
       <script src="./jquery/dist/jquery.min.js"></script>
 </body>
+ 
+ <!-- Student Name: Thiago | # 300999999  -->
 
 </html>
